--- a/public/vpaid-ad/index.html
+++ b/public/vpaid-ad/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="ad-container">
         <div id="ad-content">
-            <h1>Submit Your Details</h1>
             <form id="ad-form">
+            <h4>Submit Your Details</h4>
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
@@ -25,7 +25,7 @@
                 </div>
                 <button type="submit">Submit</button>
             </form>
-            <div id="message"></div>
+            <h4 id="message"></h4>
         </div>
     </div>
     <script src="vpaid.js"></script>
